
Don't use sample.