@@ -5,7 +5,7 @@ AppCopyright=Copyright (C) 2020 MANUFACTURER
 AppPublisher=MANUFACTURER
 AppPublisherURL=http://www.spam.com
 AppSupportURL=http://www.spam.com
-AppVersion=0.10.0
+AppVersion=0.11.0
 VersionInfoVersion=1.0.0
 DefaultDirName={pf}\BassMatrix
 DefaultGroupName=BassMatrix
